# LVGL8_ESP32

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/encoder/: CMakeLists.txt  encoder.h
components/fastscan/: CMakeLists.txt  fastscan.c  fastscan.h
components/gui_demos/: CMakeLists.txt
components/gui_demos/include/anim/: anim.h
components/gui_demos/include/app/: app.h
components/gui_demos/include/config/: config.h
components/gui_demos/include/page/: bg_cont_page.h  boot_page.h  main_menu_page.h  sdcard_info_page.h  ui_memory_check_page.h  wifi_page.h
components/gui_demos/src/anim/: anim.c
components/gui_demos/src/app/: app.c
components/gui_demos/src/font/: CMakeLists.txt  my_font_chinese_18.c
components/gui_demos/src/img/: astronaut1.c  astronaut10.c  astronaut11.c  astronaut12.c  astronaut13.c  astronaut14.c  astronaut2.c  astronaut3.c  astronaut4.c  astronaut5.c  astronaut6.c  astronaut7.c  astronaut8.c  astronaut9.c  img.c
components/gui_demos/src/page/: bg_cont_page.c  boot_page.c  main_menu_page.c  sdcard_info_page.c  ui_memory_check_page.c  wifi_page.c
components/lv_fs_if/: CMakeLists.txt  lv_fs_fatfs.c  lv_fs_if.h
components/lvgl/: lv_conf.h
components/lvgl_disp_port/: lvgl_disp_port.c  lvgl_disp_port.h
components/lvgl_esp32_drivers/: lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: st7735s.h  st7789.c
components/lvgl_indev_port/: lvgl_indev_port.c  lvgl_indev_port.h
components/sd_fat/: CMakeLists.txt  sd_fat.c  sd_fat.h
main/: CMakeLists.txt  main.c
(+2 files in other folders)
